added DB classes

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,7 +12,7 @@
 <script type="text/babel">
     ReactDOM.render(
         <div>
-        <form id = "login_form" method="get" action="/home/checklogin">
+        <form id = "login_form" method="post" action="/home/checklogin">
             <input type="login" name="login" placeholder="You login" />
             <input type="password" name="password" placeholder="Your password" />
             <button type="submit">Sing In</button>
