--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<head>
+    <title>Spring Security Example</title>
+</head>
+<body>
+<h1>Welcome!</h1>
+
+<p>Click <a href="/user-room">here</a> to see a greeting.</p>
+<p>Click <a href="/registration">here</a> to create new User.</p>
+
+</body>
+</html>
+
+
+<!--
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Home Page</title>
@@ -8,18 +24,20 @@
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 </head>
 <body>
-<div id = "login"></div>
+<a th:href="@{/user-room}">here</a>
+<div id = "main"></div>
 <script type="text/babel">
     ReactDOM.render(
         <div>
-        <form id = "login_form" method="post" action="/home/checklogin">
-            <input type="login" name="login" placeholder="You login" />
-            <input type="password" name="password" placeholder="Your password" />
-            <button type="submit">Sing In</button>
-        </form>
+        <h1> Welcome to Service exchange email</h1>
+         <span><p>You want create new user  then go to this link <a href="/registration">Registration</a></p></span>
+         <span><p>Sign In  OR  user room please go to this link  <a href="/user-room">User room</a></p></span>
         </div>,
-        document.getElementById("login")
+        document.getElementById("main")
         );
 </script>
+<form id = "login_form" method="get" action="/user-room">
+            <button type="submit">Sing In</button>
+        </form>
 </body>
-</html>
+</html-->
