commit with work spring security

--- a/src/main/resources/static/error.html
+++ b/src/main/resources/static/error.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Home Page</title>
+    <title>ERROR</title>
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
@@ -12,9 +12,9 @@
 <script type="text/babel">
     ReactDOM.render(
         <div>
-        <h1> Welcome to Service exchange email</h1>
-         <span><p>You want create new user  then go to this link <a href="/registration">Registration</a></p></span>
-         <span><p>Sign In  OR  user room please go to this link  <a href="/user-room">User room</a></p></span>
+        <h1>Sorry, but this page not available</h1>
+         <span><p>If do you want create new user, please, Go to this link: <a href="/registration">Registration</a></p></span>
+         <span><p>OR go to Private Office if do you know login and password :  this link  <a href="/user-room">User room</a></p></span>
         </div>,
         document.getElementById("main")
         );
