--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8"/>
-    <title>Hello demo</title>
+    <title>Home Page</title>
+    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 </head>
 <body>
-<div id="react"/>
-<script src="/generated/app-bundle.js"/>
+<div id = "main"></div>
+<script type="text/babel">
+ ReactDOM.render(
+            <div>
+            <h1> Welcome to Service exchange email</h1>
+             <span><p>You want create new user  then go to this link <a href="/registration">Registration</a></p></span>
+             <span><p>Sign In  OR  user room please go to this link  <a href="/user">User room</a></p></span>
+            </div>,
+             document.getElementById("main")
+         );
+</script>
 </body>
 </html>
